<resources>
    <string name="app_name">BarTender</string>

    <!-- Main Activity string -->
    <string name="menu_button">Carte</string>
    <string name="login_button">Connexion</string>
    <string name="register_button">Inscription</string>

    <!-- RegisterActivity -->
    <string name="register_username_field_label">Nom d\'utilisateur :</string>
    <string name="register_password_field_label">Mot de passe :</string>
    <string name="register_password_confirmation_field_label">Confirmer le mot de passe :</string>
    <string name="register_button_text">Je m\'inscris!</string>
    <string name="register_wrong_password_msg">Les mots de passe ne correspondent pas.</string>
    <string name="register_username_already_exists">Ce nom d\'utilisateur est déjà pris.</string>
    <string name="sorry_error">Une erreur est survenue, désolé.</string>
    <string name="main_back_button_disable">Pour retourner en arrière, déconnectez vous.</string>

    <!-- Login strings -->
    <string name="login_activity_title">Identifiez-vous</string>
    <string name="login_field_label">Identifiant :</string>
    <string name="password_field_label">Mot de passe :</string>
    <string name="login_button_text">Connexion</string>
    <string name="login_wrong_password_msg">Identifiants incorrects!</string>
    <string name="title_activity_customer_logged_menu" translatable="false">CustomerLoggedMenuActivity</string>

    <string name="title_activity_waiter_logged_menu" translatable="false">WaiterLoggedMenuActivity</string>
    <string name="title_activity_main" translatable="false">BarTender</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="title_activity_show_menu" translatable="false">ShowMenuActivity</string>

    <!-- MainLoggedActivity strings -->
    <string name="welcome_text">Bienvenue</string>
    <string name="logout_button">Déconnexion</string>
    <string name="search_button">Recherches</string>
    <string name="order_button">Commandes</string>

    <!--ShowDrinkDetailsActivity strings -->
    <string name="show_details_description_title">Description:</string>
    <string name="show_details_name_title">Nom:</string>
    <string name="show_details_picture_title">Image:</string>
    <string name="show_details_price_title">Prix:</string>
    <string name="show_details_quantity_title">Quantité disponible:</string>
    <string name="show_details_volume_title">Volume:</string>
    <string name="show_details_stockmax_title">Stock maximal:</string>
    <string name="show_details_threshold_title">Seuil:</string>
    <string name="show_details_category_title">Catégorie:</string>
    <string name="show_details_subcategory_title">Sous catégorie:</string>
    <string name="show_details_average_title">Note:</string>

    <!-- ShowMenuActivity -->
    <string name="show_list_name_title">Boisson</string>
    <string name="show_list_price_title">Prix</string>
    <string name="menu_title">La carte</string>
    <string name="title_activity_show_drink_details" translatable="false">ShowDrinkDetailsActivity</string>
    <string name="show_list_error_no_item">La carte est vide.</string>
    <string name="show_list_no_result">Pas de résulat.</string>

    <!-- ShowOrderActivity -->
    <string name="title_activity_show_bill">Commandes</string>
    <string name="show_list_table_number_title">N\* Table</string>
    <string name="show_list_waiter_title">Serveur</string>
    <string name="order_title">Commandes</string>

    <!-- ShowBillActivity -->
    <string name="title_activity_show_order">Additions</string>

    <!--AddBillActivity-->
    <string name="numero_table">Nouvelle addition</string>

    <!-- DRAFT -->
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_order_details" translatable="false">ShowOrderDetailsActivity</string>
    <string name="title_activity_show_comments" translatable="false">ShowCommentsActivity</string>
    <string name="title_activity_add_opinion" translatable="false">AddOpinionActivity</string>
    <string name="you_have_to_be_connected">Connexion requise.</string>
    <string name="show_now_comment">Pas encore de commentaire.</string>
    <string name="show_now_order_details">Pas de détails pour la commande.</string>
    <string name="show_msg_error_already_commented">Vous avez déjà commenté cette boisson.</string>
    <string name="please_specify_a_note_value">Veuillez indiquez une note.</string>
    <string name="opinion_added">Votre avis a été ajouté!</string>
    <string name="error_retrieving_opinions">Erreur lors de la récupération des avis.</string>
    <string name="error_retrieving_order_details">Erreur lors de la récupération des boissons (details commande).</string>
    <string name="error_adding_opinion">Erreur lors de l\'ajout du commentaire.</string>
    <string name="add_comment_label">Ajouter</string>
    <string name="title_activity_add_bill" translatable="false">AddBillActivity</string>
    <string name="add_bill_success">Addition ajoutée.</string>
    <string name="error_adding_bill">Impossible de créer l\'addition.</string>
    <string name="error_no_bills">Pas de facture.</string>
    <string name="add__drink_succeed">Ajout des boissons à la commande</string>
    <string name="no_table_number">Veuillez entrer un numéro de table</string>
    <string name="addition_closed">Addition clôturée.</string>
    <string name="bill_closed">Facture cloturée.</string>
    <string name="show_list_no_order">Pas de commande en cours.</string>

    <string name="title_activity_search">Recherches</string>
    <string name="no_quantity">Veuillez insérer une quantité.</string>
    <string name="nonvalid_quantity">Veuillez insérer une quantité valide.</string>
    <string name="not_enough_drinks">Il n\'y a plus assez de cette boisson en stock.</string>
    <string name="finish_order_to_go_back">Terminer la commande pour revenir en arrière.</string>
    <string name="show_list_id_order_title"></string>

</resources>
