<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainLoggedActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button"
        android:id="@+id/menu_button"
        android:onClick="menu"
        android:layout_above="@+id/search_button"
        android:layout_alignRight="@+id/logout_button"
        android:layout_alignEnd="@+id/logout_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#FC3A9EC9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:id="@+id/search_button"
        android:onClick="searchLaunch"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#FC3A9EC9"
        android:layout_marginTop="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:id="@+id/logout_button"
        android:onClick="logout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#dd4814" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:id="@+id/welcome_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_button"
        android:onClick="order"
        android:id="@+id/order_button"
        android:layout_below="@+id/search_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/search_button"
        android:layout_alignEnd="@+id/search_button"
        android:background="#FC3A9EC9"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Additions"
        android:onClick="bill"
        android:id="@+id/bill_button"
        android:layout_below="@+id/order_button"
        android:layout_alignRight="@+id/order_button"
        android:layout_alignEnd="@+id/order_button"
        android:layout_alignLeft="@+id/order_button"
        android:layout_alignStart="@+id/order_button"
        android:background="#FC3A9EC9"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logotransparent"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />
</RelativeLayout>
