<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lsinf1225.groupe_t.bartender.activity.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button"
        android:id="@+id/show_menu_button"
        android:layout_marginBottom="42dp"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:onClick="menu" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:background="#3fb24f" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:id="@+id/register_button"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/login_button"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button"
        android:onClick="register"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logotransparent"
        android:layout_above="@+id/show_menu_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
